--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   </head>
 
   <body>
-    <h1>Hello World, we are software developers!</h1>
-
+    <section>
+      <div>
+        <h1 id="title">freeCodeCamp Survey Form</h1>
+        <p id="description">Thank you for taking the time to help us improve the platform</p>
+      </div>
+    </section>
+    
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
