--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
       <div>
         <h1 id="title">freeCodeCamp Survey Form</h1>
         <p id="description">Thank you for taking the time to help us improve the platform</p>
+
+        <form action="" id="survey-form">
+          <div class="form-section">
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="Enter Your Name">
+          </div>
+        </form>
       </div>
+
+      
     </section>
     
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
