--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             <label for="name">Name</label>
             <input type="text" id="name" placeholder="Enter Your Name">
           </div>
+
+          <div class="form-section">
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Enter Your Email">
+          </div>
+          
         </form>
       </div>
 
