--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
 
         <form action="" id="survey-form">
           <div class="form-section">
-            <label for="name">Name</label>
+            <label for="name" id="name-label">Name</label>
             <input type="text" id="name" placeholder="Enter Your Name">
           </div>
 
           <div class="form-section">
-            <label for="email">Email</label>
+            <label for="email" id="email-label">Email</label>
             <input type="email" id="email" placeholder="Enter Your Email">
+          </div>
+
+          <div class="form-section">
+            <label for="number" id="number-label">Age (option)</label>
+            <input type="number" id="number" placeholder="Enter Your Age" min="10" max="60">
           </div>
           
         </form>
